# thesis-microbench

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CPPLINT.cfg
scripts/: bench.sh
src/: CMakeLists.txt  avro.cpp  avro.hpp  bench.cpp  bench.hpp  constants.hpp  csv.cpp  csv.hpp  flatbuffer.cpp  flatbuffer.hpp  json.cpp  json.hpp  native.cpp  native.hpp  parse.hpp  protobuf.cpp  protobuf.hpp  tuple.avro.h  tuple.fb.h  tuple.fbs  tuple.proto  tuple_avro.json  tuple_generated.h
submodules/: CMakeLists.txt
